# aoc_2024

./: Cargo.toml  README.md
benches/: benchmark_day1.rs  benchmark_day2.rs  benchmark_day3.rs  benchmark_day4.rs  benchmark_day5.rs  benchmark_day6.rs  benchmark_day7.rs
src/: main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs
