[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11"
rayon = "1.10" 

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark_day1"
harness = false

[[bench]]
name = "benchmark_day2"
harness = false

[[bench]]
name = "benchmark_day3"
harness = false

[[bench]]
name = "benchmark_day4"
harness = false

[[bench]]
name = "benchmark_day5"
harness = false

[[bench]]
name = "benchmark_day6"
harness = false

[[bench]]
name = "benchmark_day7"
harness = false
